[project]
name = "agilent_hplcms_server"
version = "0.1.0"
description = "Read-only STATUS_SPEC v1.0 sidecar for the existing Agilent UPLC-MS controller (moses) on this lab PC."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Yang Cao" },
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "httpx>=0.27",
]

[project.scripts]
agilent-hplcms-server-serve = "agilent_hplcms_server.api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agilent_hplcms_server"]
